--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <%- include('./partials/header') %>
 
 <h1> IDEALIO </h1>
+<div> <img src="images/googlelogo.png"/></div>
 
 <%- include('./partials/footer') %>
