--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/header') %>
 
-<h1> IDEALIO </h1>
+<h1> IDEALIO server </h1>
 <div> <img src="images/googlelogo.png"/></div>
 
 <%- include('./partials/footer') %>
