--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,3 +4,67 @@ body {
   font-family: sans-serif;
 }
 
+.restaurant_form {
+
+  margin: 30px;
+}
+
+.photo_container {
+  border: 0.5px lightgray solid;
+  border-radius: 5px;
+  width: 100%;
+  padding: 20px;
+
+}
+
+@media only screen and (min-width: 900px) {
+
+  .CreateRestaurantPage {
+
+    display: flex;
+  }
+
+  .restaurant_form {
+
+    width: 60%;
+  }
+
+  .RenderRestaurantDetail {
+
+    width: 40%;
+    margin: 30px 30px 30px 0;
+  }
+
+  .photos {
+    width: 100%;
+    height: 240px;
+  }
+
+}
+
+@media only screen and (min-width: 460px) and (max-width: 899px) {
+
+  .photos {
+    width: 100%;
+    height: 300px;
+  }
+
+  .photo_container {
+    padding: 30px;
+    width: 60%;
+  }
+
+  .RenderRestaurantDetail {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 459px) {
+
+  .photos {
+    width: 100%;
+    height: 240px;
+  }
+}
+
