--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,44 +14,46 @@ body {
   border-radius: 5px;
   width: 100%;
   padding: 20px;
-
+  
 }
 
 @media only screen and (min-width: 900px) {
-
+  
   .CreateRestaurantPage {
-
+    
     display: flex;
+    flex-direction: row-reverse;
   }
-
+  
   .restaurant_form {
-
+    
     width: 60%;
   }
-
+  
   .RenderRestaurantDetail {
-
+    
     width: 40%;
     margin: 30px 30px 30px 0;
   }
-
+  
   .photos {
     width: 100%;
     height: 240px;
   }
-
+  
 }
 
 @media only screen and (min-width: 460px) and (max-width: 899px) {
-
+  
   .photos {
     width: 100%;
     height: 300px;
   }
-
+  
   .photo_container {
     padding: 30px;
-    width: 60%;
+    margin-top: 30px;
+    width: 70%;
   }
 
   .RenderRestaurantDetail {
@@ -62,6 +64,15 @@ body {
 
 @media only screen and (max-width: 459px) {
 
+  .RenderRestaurantDetail {
+    display: flex;
+    justify-content: center;
+  }
+
+  .photo_container {
+    margin-top: 30px;
+    width: 86%;
+  }
   .photos {
     width: 100%;
     height: 240px;
