--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,7 @@ body {
   font-family: sans-serif;
 }
 
+
 .restaurant_form {
 
   margin: 30px;
@@ -61,6 +62,19 @@ body {
 
 .restaurant_form > .submit {
   background-color: white;
+}
+
+.svg-background {
+  background-image: url(https://png.pngtree.com/element_origin_min_pic/16/10/12/2257fe47d343f1f.jpg);
+  /* background-color: white; */
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  
+  filter: hue-rotate(200deg) saturate(10) contrast(140%) invert(90%)
 }
 
 @media only screen and (min-width: 900px) {
@@ -159,4 +173,5 @@ body {
     height: 240px;
   }
 }
+
 
