--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,14 +65,14 @@ body {
 }
 
 .svg-background {
-  background-image: url(https://coolbackgrounds.io/images/backgrounds/sea-edge-311c5cd5.png);
-  /* background-color: white; */
+  background-image: url('/assets/images/background-svg.png');
   background-size: cover;
   background-repeat: no-repeat;
   position: fixed;
   width: 100%;
   height: 100%;
   z-index: -1;
+  filter: brightness(80%) contrast(200%) grayscale(40%);
   
   /* filter: hue-rotate(200deg) saturate(10) contrast(140%) invert(90%) */
 }
