--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,18 @@ body {
   font-family: sans-serif;
 }
 
+#testing {
+  stroke-dasharray: 1257;
+  stroke-dashoffset: 1257;
+  animation: dash 3s linear forwards;
+}
+
+@keyframes dash {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
 
 .restaurant_form {
 
