--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,25 @@ body {
   font-family: sans-serif;
 }
 
+.animate-bars-stroke {
+  stroke-dasharray: 1257;
+  stroke-dashoffset: 1257;
+  animation: dash 3s linear forwards;
+}
+
+.animate-path {
+  stroke-dasharray: 1100;
+  stroke-dashoffset: 1100;
+  animation: dash 1.5s linear forwards;
+}
+
+@keyframes dash {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+
 .restaurant_form {
 
   margin: 30px;
@@ -61,6 +80,19 @@ body {
 
 .restaurant_form > .submit {
   background-color: white;
+}
+
+.svg-background {
+  background-image: url('/assets/images/background-svg.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  filter: brightness(70%) contrast(200%) grayscale(40%);
+  
+  /* filter: hue-rotate(200deg) saturate(10) contrast(140%) invert(90%) */
 }
 
 @media only screen and (min-width: 900px) {
@@ -159,4 +191,5 @@ body {
     height: 240px;
   }
 }
+
 
