--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,6 +22,22 @@ body {
   }
 }
 
+.Navbar {
+  height: 45px;
+  background-color: #323232;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0 16%;
+
+}
+.Navbar a {
+  color: white;
+}
+.Navbar a:hover {
+  color: rgb(165, 165, 165);
+  text-decoration: none;
+}
 
 .restaurant_form {
 
@@ -70,7 +86,7 @@ body {
   background-image: url(https://st.depositphotos.com/3046849/3951/i/950/depositphotos_39515525-stock-photo-large-collage-of-many-different.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-
+  top: 0;
   filter: contrast(30%);
   z-index: -1;
   position: fixed;
@@ -87,6 +103,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   position: fixed;
+  top: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
@@ -94,6 +111,13 @@ body {
   
   /* filter: hue-rotate(200deg) saturate(10) contrast(140%) invert(90%) */
 }
+
+
+
+
+
+
+
 
 @media only screen and (min-width: 900px) {
   
@@ -133,6 +157,11 @@ body {
   
 }
 
+
+
+
+
+
 @media only screen and (min-width: 460px) and (max-width: 899px) {
   
   .photos {
@@ -169,6 +198,11 @@ body {
   }
 
 }
+
+
+
+
+
 
 @media only screen and (max-width: 459px) {
 
