apply autocomplete to address on sign up page and send error when the form is empty

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -112,14 +112,23 @@ body {
   /* filter: hue-rotate(200deg) saturate(10) contrast(140%) invert(90%) */
 }
 
+.SignUpPage form {
+  margin: 60px;
+}
 .SignUpPage div {
-  margin: 20px;
+  width: 70%;
 }
 .SignUpPage p {
   color: red;
   margin-bottom: 2px;
 }
 
+.SignInPage form {
+  margin: 60px;
+}
+.SignInPage div {
+  width: 70%;
+}
 
 
 
