--- a/client/src/index.css
+++ b/client/src/index.css
@@ -99,15 +99,17 @@ body {
 }
 
 .svg-background {
-  background-image: url('/assets/images/background-svg.png');
-  background-size: cover;
-  background-repeat: no-repeat;
+  /* background-image: url('/assets/images/background-svg.png'); */
+  background: linear-gradient(rgb(207, 207, 207), rgb(65, 65, 65));
+  /* background-size: cover; */
+  /* background-repeat: no-repeat; */
   position: fixed;
   top: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
-  filter: brightness(70%) contrast(200%) grayscale(40%);
+  /* filter: grayscale(30%); */
+  /* filter: brightness(100%) contrast(50%) grayscale(100%) hue-rotate(300deg); */
   
   /* filter: hue-rotate(200deg) saturate(10) contrast(140%) invert(90%) */
 }
@@ -252,3 +254,42 @@ body {
 }
 
 
+
+
+#myVideo {
+  z-index: -5;
+  position: fixed;
+  top:30px;
+  right: 0;
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
+}
+
+/* Add some content at the bottom of the video/page */
+.HomePage .content {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 20%;
+  height: 100%;
+  padding: 20px;
+}
+
+/* Style the button used to pause/play the video */
+#myBtn {
+  width: 200px;
+  font-size: 15px;
+  position: fixed;
+  top: 700px;
+  left: 100px;
+  border: none;
+  background-color: transparent;
+  color: #fff;
+  cursor: pointer;
+}
+
+#myBtn:hover {
+  background: transparent;
+  color: gray;
+}
