--- a/client/src/index.css
+++ b/client/src/index.css
@@ -82,16 +82,28 @@ body {
   width: inherit;
 }
 
-.backgroundImage {
-  background-image: url(https://st.depositphotos.com/3046849/3951/i/950/depositphotos_39515525-stock-photo-large-collage-of-many-different.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
+/* .CreateRestaurantPage .backgroundImage {
+  background: linear-gradient(rgb(126, 126, 126), rgb(172, 172, 172));
   top: 0;
-  filter: contrast(30%);
   z-index: -1;
   position: fixed;
   width: 1280px;
   height: 800px;
+} */
+.CreateRestaurantPage {
+  background: linear-gradient( rgb(126, 126, 126), rgb(175, 175 ,175));
+  height: 120%;
+}
+
+.CreateRestaurantPage label {
+  background-color: transparent;
+  border: none;
+  color: white;
+}
+
+.CreateRestaurantPage .chosen-container a {
+  padding-left: 0;
+  border: solid lightgreen 2px;
 }
 
 .restaurant_form > .submit {
@@ -111,7 +123,6 @@ body {
   /* filter: grayscale(30%); */
   /* filter: brightness(100%) contrast(50%) grayscale(100%) hue-rotate(300deg); */
   
-  /* filter: hue-rotate(200deg) saturate(10) contrast(140%) invert(90%) */
 }
 
 .SignUpPage form {
