--- a/client/src/index.css
+++ b/client/src/index.css
@@ -306,3 +306,25 @@ body {
   background: transparent;
   color: gray;
 }
+
+/*   EvalRestaurantPage */
+.restaurant_ img {
+  display: block;
+  max-width: 50%;
+  max-height: 300px;
+
+}
+
+.modal-body {
+  text-align: center;
+}
+.modal-body > * {
+  color: white;
+}
+
+.modal-body button {
+  margin: 15px 40px;
+}
+/* .axis g:not(:first-of-type):not(:last-of-type) {
+  display: none;
+} */
