--- a/client/src/index.css
+++ b/client/src/index.css
@@ -91,7 +91,7 @@ body {
   height: 800px;
 } */
 .CreateRestaurantPage {
-  background: linear-gradient( rgb(126, 126, 126), rgb(175, 175 ,175));
+  /* background: linear-gradient( rgb(126, 126, 126), rgb(175, 175 ,175)); */
   height: 120%;
 }
 
@@ -151,7 +151,7 @@ body {
 }
 
 .SearchRestaurantsPage .evalRestaurant{
-  margin: 300px 100px;
+  margin: 20px 100px;
 }
 
 
