--- a/client/src/index.css
+++ b/client/src/index.css
@@ -316,6 +316,13 @@ body {
   width: 300px;
   height: 400px;
   background-color: white;
+  padding: 30px 0;
+  overflow: scroll;
+}
+.HomeModal .right-container > .rows {
+  display: flex;
+  justify-content: center;
+  padding: 11px 0;
 }
 /* Style the button used to pause/play the video */
 #myBtn {
