separate modal content as componentA and clone it as componentB to use in slider

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -296,6 +296,11 @@ body {
   top: 350px;
   left: 700px;
 }
+#modal-btn {
+  position: absolute;
+  top: 350px;
+  left: 500px;
+}
 
 .HomeModal .modal-content {
   border: 0;
