--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,20 @@
 /*------------------------------App------------------------------------*/
+.App {
+   transition: transform 0.5s;
+}
 
+.coverApp::before {
+    content: '';
+    opacity: 1;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    z-index: 300;
+    background-color: rgba(0, 0, 0, .75);
+    transition: all 0.5s ease-in-out;
+}
 /*----------------------------LeftNavbar----------------------------*/
 @import url('https://fonts.googleapis.com/css?family=Dosis|Rubik');
 
@@ -8,11 +23,10 @@
     background: rgba(50, 50, 50);
     color: #f1f1f1;
     width: 300px;
-    height: 100%;
-    padding: 20px;
+    height: 100vh;
     top: 0;
-    transform: translateX(-300px);
-    transition: transform 0.5s;
+    left: -300px;
+    border-right: solid 0.2px lightgray;
 }
 
 .LeftNavbar * {
@@ -20,12 +34,15 @@
 }
 
 .content > div {
-    padding: 10px 0;
+    padding: 20px;
+    border-bottom: solid 0.2px lightgray;
 }
 .content > .controller {
     display: flex;
     justify-content: space-between;
     padding: 10px;
+    font-size: 14px;
+    height: 45px;
 }
 
 .content > .controller >  p {
@@ -49,8 +66,8 @@
     height: 3px;
     background-color: white;
     transform: rotate(45deg);
-    left: 245px;
-    top: 42px;
+    left: 265px;
+    top: 20px;
 }
 .content > .controller > .btn-close::after {
     content: '';
@@ -59,8 +76,8 @@
     height: 3px;
     background-color: white;
     transform: rotate(135deg);
-    left: 245px;
-    top: 42px;
+    left: 265px;
+    top: 20px;
 }
 
 .content > .controller > *:hover {
@@ -81,11 +98,9 @@
 }
 
 .content .links {
-    margin-top: 100px;
-    text-align: end;
 }
 
-.content .links > a {
+.content > div > a {
     color: white;
     display: block;
     margin: 10px 0;
