--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 /*------------------------------App------------------------------------*/
 .App {
-   transition: transform 0.5s;
+   transition: all 0.5s;
 }
 
 .coverApp::before {
@@ -15,6 +15,8 @@
     background-color: rgba(0, 0, 0, .75);
     transition: all 0.5s ease-in-out;
 }
+
+
 /*----------------------------LeftNavbar----------------------------*/
 @import url('https://fonts.googleapis.com/css?family=Dosis|Rubik');
 
