--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,43 +22,58 @@
 
 .LeftNavbar {
     position: fixed;
-    background: rgba(50, 50, 50);
-    color: #f1f1f1;
+    background: #F4F7F6;
+    color: #1b1b1b;
     width: 300px;
     height: 100vh;
     top: 0;
     left: -300px;
-    border-right: solid 0.2px lightgray;
-}
-
-.LeftNavbar * {
-    overflow: hidden;
+    border-right: solid 0.2px rgb(61, 61, 61);
+    font-family: 'Rubik', sans-serif;
+    overflow: scroll;
 }
 
 .content > div {
-    padding: 20px;
-    border-bottom: solid 0.2px lightgray;
+    font-size: 20px;
+    width: 100%;
+    height: 90px;
+    padding: 20px 30px;
+    border-bottom: solid 0.1px rgb(216, 215, 215);
 }
+.content > div:hover {
+    background-color: rgb(255, 255, 255);
+}
+
 .content > .controller {
     display: flex;
     justify-content: space-between;
     padding: 10px;
-    font-size: 14px;
+    font-size: 13px;
     height: 45px;
 }
 
-.content > .controller >  p {
+.content > .controller > * {
     margin: 0;
 }
 
+.content > div:not(.controller) > * {
+    margin: 10px 0;
+    display: block;
+}
+
+.content > div > * {
+    color: rgb(49, 49, 49);
+    cursor: pointer;
+}
+.content > div > *:hover {
+    color: rgb(160, 160, 160);
+    text-decoration: none;
+}
+
 .content > .controller > .btn-close {
-    box-sizing: border-box;
     background-color: transparent;
     border: none;
-    color: white;
-    cursor: pointer;
     padding-right: 30px;
-
 }
 
 .content > .controller > .btn-close::before {
@@ -66,7 +81,7 @@
     position: absolute;
     width: 23px;
     height: 3px;
-    background-color: white;
+    background-color: rgb(43, 43, 43);
     transform: rotate(45deg);
     left: 265px;
     top: 20px;
@@ -76,42 +91,20 @@
     position: absolute;
     width: 23px;
     height: 3px;
-    background-color: white;
+    background-color: rgb(46, 45, 45);
     transform: rotate(135deg);
     left: 265px;
     top: 20px;
 }
 
-.content > .controller > *:hover {
-    color: rgb(165,165,165);
-}
 
-
-.content > .intro > h1 {
+.content > .about > h1 {
     font-family: 'Baloo', cursive;
     display: inline;
     font-size: 35px;
 }
 
-.content > .intro > p {
+.content > .about > p {
     display: inline;
     font-family: 'Dosis', sans-serif;
-    font-size: 20px;
-}
-
-.content .links {
-}
-
-.content > div > a {
-    color: white;
-    display: block;
-    margin: 10px 0;
-    font-family: 'Rubik', sans-serif;
-    font-weight: 200;
-    font-size: 22px;
-}
-
-.content a:hover {
-    color: rgb(165, 165, 165);
-    text-decoration: none;
 }
