--- a/client/src/components/pages/HomePage.css
+++ b/client/src/components/pages/HomePage.css
@@ -34,8 +34,8 @@
 /*------------------------------------------HomeModal--------------------*/
 #modal-btn {
     position: absolute;
-    top: 350px;
-    left: 500px;
+    top: 50%;
+    left:50%;
 }
 
 /* .HomeModal {
