--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,5 +1,5 @@
 /*------------------------------NavBar--------------------------*/
-@import url('https://fonts.googleapis.com/css?family=Baloo|Rubik|Dosis');
+@import url('https://fonts.googleapis.com/css?family=Baloo|Rubik|Dosis|Work+Sans:900');
 
 .Navbar {
     height: 45px;
