--- a/client/src/components/LandingSlider.css
+++ b/client/src/components/LandingSlider.css
@@ -7,7 +7,7 @@
     left: 0;
     width: 100%;
     z-index:100;
-    background-color: white;
+    background-color: rgb(251, 246, 242);
 }
 
 .slides > div {
@@ -38,7 +38,6 @@
 #site-name > span {
     opacity: 0;
     transform: scale(1.9, 1.9);
-    /* margin-right: .5em; */
     display: inline-block;
 }
 
@@ -46,4 +45,34 @@
     opacity: 1;
     transform: scale(1, 1);
     transition: opacity .5s ease-out, transform .5s ease-out;
+}
+
+#scroll-open {
+    position: fixed;
+    left: 630px;
+    top: 665px;
+    z-index: 102;
+    width: 100px;
+    text-align: center;
+}
+#scroll-open > a {
+    color: white;
+    text-decoration: none;
+}
+
+#scroll-arrow {
+    opacity: 0;
+    transform: rotateX(180deg) translateY(20px) scaleX(2.5);
+    transition: transform 1.3s ease-in-out, opacity 1.3s ease-in-out;
+}
+
+#scroll-arrow.scroll-animate {
+    transform: rotateX(180deg) scaleX(2.5) translateY(0);
+    opacity: 1;
+    transition: transform 1.3s ease-out, opacity 1.3s ease-out;
+}
+
+#scroll-arrow::before {
+    content: '\21ea';
+    font-size: 34px;
 }
