--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,5 +1,5 @@
 /*------------------------------NavBar--------------------------*/
-@import url('https://fonts.googleapis.com/css?family=Baloo|Rubik|Dosis|Work+Sans:900');
+@import url('https://fonts.googleapis.com/css?family=Baloo|Rubik|Dosis|Monoton|Londrina+Outline|Londrina+Shadow|Londrina+Sketch');
 
 .Navbar {
     height: 45px;
@@ -15,7 +15,7 @@
 
 .Navbar * {
     color: white;
-    font-family: 'Baloo', cursive;
+    font-family: 'Londrina Outline', cursive;
     margin: 0
 }
 
