--- a/client/src/components/LandingSlider.css
+++ b/client/src/components/LandingSlider.css
@@ -63,13 +63,13 @@
 
 #scroll-arrow {
     opacity: 0;
-    transform: rotateX(180deg) translateY(20px) scale(2.9, 0.5);
+    transform: rotateX(180deg) translateY(20px) scale(2.5, 1);
     transition: transform 1.3s ease-in-out, opacity 1.3s ease-in-out;
 }
 
 #scroll-arrow.scroll-animate {
     opacity: 1;
-    transform: rotateX(180deg) scale(2.9, 0.5) translateY(0);
+    transform: rotateX(180deg) translateY(0) scale(2.5, 1);
     transition: transform 1.3s ease-out, opacity 1.3s ease-out;
 }
 
@@ -101,6 +101,14 @@
 
     #scroll-open {
         left: 37vw;
+    }
+
+    #scroll-arrow {
+        transform: rotateX(180deg) translateY(20px) scale(3.5, 1);
+    }
+
+    #scroll-arrow.scroll-animate {
+        transform: rotateX(180deg) translateY(0) scale(3.5, 1);
     }
 
     #scroll-arrow::before {
