--- a/client/src/components/LandingSlider.css
+++ b/client/src/components/LandingSlider.css
@@ -28,12 +28,12 @@
 
 #site-name {
     position: fixed;
-    top: 45%;
+    top: 40%;
     left: 50%;
     width: 90%;
     margin-left: -45%;
     text-align: center;
-    font-size: 140px;
+    font-size: 180px;
     font-family: 'Londrina Shadow', cursive; 
     color: white;
     z-index: 102;
@@ -57,55 +57,47 @@
     z-index: 102;
     width: 90%;
     margin-left: -45%;
-    text-align: center;
+    display: flex; 
+    justify-content: center;
 }
 #scroll-open > a {
+    width: 5%;
     color: white;
     text-decoration: none;
 }
 
 #scroll-arrow {
+    background: url('/assets/images/arrows-down.png') no-repeat center;
+    background-size: cover;
+    width: 100%;
+    padding-top: 100%;
+    height: 0;
     opacity: 0;
-    transform: rotateX(180deg) translateY(20px) scale(2.5, 1);
+    transform: translateY(20px);
     transition: transform 1.3s ease-in-out, opacity 1.3s ease-in-out;
 }
 
 #scroll-arrow.scroll-animate {
     opacity: 1;
-    transform: rotateX(180deg) translateY(0) scale(2.5, 1);
+    transform: translateY(0);
     transition: transform 1.3s ease-out, opacity 1.3s ease-out;
 }
 
-#scroll-arrow::before {
+/* #scroll-arrow::before {
     content: '\21ea';
     font-size: 34px;
-}
+} */
 
 @media only screen and (max-width: 352px) {
     #site-name {
         font-size: 70px;
-    }
-
-    #scroll-arrow::before {
-        font-size: 27px;
     }
 }
 
 @media only screen and (min-width: 353px) and (max-width: 385px) {
     #site-name {
         font-size: 90px;
-    }
-
-    #scroll-arrow {
-        transform: rotateX(180deg) translateY(20px) scale(3.5, 1);
-    }
-
-    #scroll-arrow.scroll-animate {
-        transform: rotateX(180deg) translateY(0) scale(3.5, 1);
-    }
-
-    #scroll-arrow::before {
-        font-size: 30px;
+        top: 45%;
     }
 }
 
@@ -113,6 +105,7 @@
     
     #site-name {
         font-size: 100px;
+        top: 45%;
     }
 }
 
@@ -120,18 +113,10 @@
     #site-name {
         font-size: 310px;
     }
-
-    #scroll-arrow::before {
-        font-size:56px;
-    }
 }
 
 @media only screen and (min-width: 3301px) {
     #site-name {
         font-size: 550px;
-    }
-
-    #scroll-arrow::before {
-        font-size: 90px;
     }
 }
