--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,7 @@
     opacity: 1;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     left: 0;
     top: 0;
     z-index: 300;
@@ -18,6 +18,16 @@
     transition: all 0.5s ease-in-out;
 }
 
+.erase {
+    height: 0 !important;
+    transition: height 1.2s !important;
+}
+
+.showNavbar {
+    height: 45px;
+    transition: height 1.2s ease-out;
+    transition-delay: 1.2s;
+}
 
 /*----------------------------LeftNavbar----------------------------*/
 @import url('https://fonts.googleapis.com/css?family=Dosis|Rubik');
