--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Baloo|Rubik|Dosis|Monoton|Londrina+Outline|Londrina+Shadow|Londrina+Sketch');
 
 .Navbar {
-    height: 45px;
+    height: 0;
     background-color: #323232;
     display: flex;
     justify-content: space-between;
