--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,7 +24,7 @@
 }
 
 .showNavbar {
-    height: 45px;
+    height: 7vh;
     transition: height 1.2s ease-out;
     transition-delay: 1.2s;
 }
@@ -127,7 +127,11 @@
     padding: 7% 26% 10% 10%;
     font-family: 'Gloria Hallelujah', sans-serif;
     opacity: 0;
-    transition: all 1s ease-in-out;
+    transition: opacity .5s ease-in-out;
+}
+
+.About.show {
+    opacity: 1;
 }
 
 .About > *{
