implement touch event for mobile

--- a/client/src/components/pages/SearchRestaurantsPage.css
+++ b/client/src/components/pages/SearchRestaurantsPage.css
@@ -3,3 +3,12 @@
 .SearchRestaurantsPage .evalRestaurant{
     margin: 20px 100px;
 }
+
+.chosen-container {
+    width: 100%;
+}
+
+.evalRestaurant > .btn[type='submit'] {
+    width: 100%;
+    margin-top: 2em;
+}
