--- a/client/src/components/pages/HomePage.css
+++ b/client/src/components/pages/HomePage.css
@@ -1,8 +1,8 @@
 /*----------------------------------HomePage----------------------*/
 
 .HomePage {
-    min-width: 1280px;
-    min-height: 730px;
+    /* min-width: 1280px;
+    min-height: 730px; */
 }
 /* #myVideo {
     z-index: -5;
@@ -105,4 +105,20 @@
     display: flex;
     justify-content: center;
     /* padding: 11px 0; */
+}
+
+
+/*---------------------------------Places----------------------------------*/
+
+.place_container {
+    height: 30vh;
+    background-color: lavender;
+    margin: 10px 0;
+    overflow: hidden;
+}
+
+.videos {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
