--- a/client/src/components/pages/HomePage.css
+++ b/client/src/components/pages/HomePage.css
@@ -110,15 +110,36 @@
 
 /*---------------------------------Places----------------------------------*/
 
+.Places.wrapper {
+    border-top: solid 10px rgb(0,0,0);
+}
 .place_container {
-    height: 30vh;
+    height: 0;
     background-color: lavender;
-    margin: 10px 0;
+    border: solid 10px rgb(0,0,0);
     overflow: hidden;
+    filter: grayscale(90%);
 }
 
 .videos {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.placeTitle {
+    position: fixed;
+
+    font-size: 60px;
+    color: white;
+}
+
+.place_container.expandPlaces {
+    filter: none;
+    height: 80vh;
+    transition: height 3s ease-out;
+}
+.place_container.shrinkPlaces {
+    height: 30vh;
+    transition: height 1s ease-out;
 }
