--- a/client/src/components/pages/HomePage.css
+++ b/client/src/components/pages/HomePage.css
@@ -109,6 +109,7 @@
 
 
 /*---------------------------------Places----------------------------------*/
+@import url('https://fonts.googleapis.com/css?family=Righteous');
 
 .Places.wrapper {
     border-top: solid 10px rgb(0,0,0);
@@ -118,7 +119,7 @@
     background-color: lavender;
     border: solid 10px rgb(0,0,0);
     overflow: hidden;
-    filter: grayscale(90%);
+    filter: grayscale(100%);
 }
 
 .videos {
@@ -128,10 +129,24 @@
 }
 
 .placeTitle {
-    position: fixed;
-
-    font-size: 60px;
+    position: absolute;
+    width: 100%;
+    font-family: 'Righteous', cursive;
+    font-size: 140px;
     color: white;
+    text-align: center;
+    visibility: hidden;
+}
+
+@media only screen and (max-width: 1279px) {
+    .placeTitle {
+        width: inherit;
+        font-size: 1rem;
+    }
+}
+
+.placeTitle.show {
+    visibility: visible;
 }
 
 .place_container.expandPlaces {
