--- a/client/src/components/LandingSlider.css
+++ b/client/src/components/LandingSlider.css
@@ -17,12 +17,12 @@
     background-position: center;
 }
 
-.slick-current > div > div > div {
+.slick-current > div > div > .bg_img {
     transform: scale(1, 1);
     transition: transform 4000ms
 }
 
-.slick-slide.reset > div > div > div {
+.slick-slide.reset > div > div > .bg_img {
     transform: scale(1.14, 1.14);
 }
 
