--- a/client/src/components/pages/CreateRestaurantPage.css
+++ b/client/src/components/pages/CreateRestaurantPage.css
@@ -10,179 +10,179 @@
 } */
 
 .CreateRestaurantPage {
-    /* background: linear-gradient( rgb(126, 126, 126), rgb(175, 175 ,175)); */
-    height: 120%;
+  /* background: linear-gradient( rgb(126, 126, 126), rgb(175, 175 ,175)); */
+  height: 120%;
 }
-  
+
 .CreateRestaurantPage label {
-    background-color: transparent;
-    border: none;
-    color: rgb(80,80,80);
+  background-color: transparent;
+  border: none;
+  color: rgb(80, 80, 80);
 }
 
 .CreateRestaurantPage .chosen-container a {
-    padding-left: 0;
+  padding-left: 0;
 }
 
 .restaurant_form {
-    margin: 30px;
+  margin: 30px;
 }
 
-.restaurant_form > .submit {
-    background-color: white;
+.restaurant_form>.submit {
+  background-color: white;
 }
 
 /*--------------------------------------RenderRestaurantDetail--------------*/
 
 .restaurant.container {
-    border: 0.5px lightgray solid;
-    border-radius: 5px;
-    background-color:white;  
+  border: 0.5px lightgray solid;
+  border-radius: 5px;
+  background-color: white;
 }
 
 .photo_container {
-    border: 0.5px lightgray solid;
-    border-radius: 5px;
-    padding: 20px;    
+  border: 0.5px lightgray solid;
+  border-radius: 5px;
+  padding: 20px;
 }
 
 .slick-prev.removeFont:before {
-    font-size: 0;
+  font-size: 0;
 }
+
 .slick-next.removeFont:before {
-    font-size: 0;
+  font-size: 0;
 }
-  
-.slick-prev > img {
-    height: 30px;
+
+.slick-prev>img {
+  height: 30px;
 }
-.slick-next > img {
-    height: 30px;
+
+.slick-next>img {
+  height: 30px;
 }
-  
+
 .placeData {
-    padding: 0 20px;
-    margin: 7%;
-    text-align: end;
+  padding: 0 20px;
+  margin: 7%;
+  text-align: end;
 }
 
 .photo_container .slick-dots {
-    width: inherit;
+  width: inherit;
 }
 
 
 @media only screen and (min-width: 900px) {
-  
-    .CreateRestaurantPage {
-      display: flex;
-      justify-content: center;
-      flex-direction: row-reverse;
-    }
-    
-    .restaurant_form {
-      width: 60%;
-    }
-    
-    .RenderRestaurantDetail {
-      
-      width: 40%;
-      margin: 30px 30px 30px 0;
-    }
-    
-    .photos {
-      width: 100%;
-      height: 240px;
-    }
 
-    .photo_container .slick-dots {
-      width: 88%;
-    }
+  .CreateRestaurantPage {
+    display: flex;
+    justify-content: center;
+    flex-direction: row-reverse;
+  }
 
-    .photo_container .slick-dots li {
-      margin: 0 4px;
-    }
-  
-    .placeData {
-      margin: 0;
-      padding: 40px 20px;
-    }
-    
+  .restaurant_form {
+    width: 60%;
+  }
+
+  .RenderRestaurantDetail {
+
+    width: 40%;
+    margin: 30px 30px 30px 0;
+  }
+
+  .photos {
+    width: 100%;
+    height: 240px;
+  }
+
+  .photo_container .slick-dots {
+    width: 88%;
+  }
+
+  .photo_container .slick-dots li {
+    margin: 0 4px;
+  }
+
+  .placeData {
+    margin: 0;
+    padding: 40px 20px;
+  }
+
 }
-  
-  
-  
-  
-  
-  
+
+
+
+
+
+
 @media only screen and (min-width: 460px) and (max-width: 899px) {
-    
-    .photos {
-      width: 100%;
-      height: 300px;
-    }
-    
-    .photo_container {
-      padding: 30px;
-      margin-top: 30px;
-    }
-  
-    .RenderRestaurantDetail {
-      display: flex;
-      justify-content: center;
-    }
-  
-    .slick-prev > img {
-      width: 30px;
-      height: 45px;
-    }
 
-    .slick-next > img {
-      width: 30px;
-      height: 45px;
-    }
+  .photos {
+    width: 100%;
+    height: 300px;
+  }
 
-    .photo_container {
-      width: 86%;
-      margin: 7%;
-    }
-    
-    .restaurant.container {
-      padding-right: 0;
-      padding-left: 0;
-    }
-  
+  .photo_container {
+    padding: 30px;
+    margin-top: 30px;
+  }
+
+  .RenderRestaurantDetail {
+    display: flex;
+    justify-content: center;
+  }
+
+  .slick-prev>img {
+    width: 30px;
+    height: 45px;
+  }
+
+  .slick-next>img {
+    width: 30px;
+    height: 45px;
+  }
+
+  .photo_container {
+    width: 86%;
+    margin: 7%;
+  }
+
+  .restaurant.container {
+    padding-right: 0;
+    padding-left: 0;
+  }
+
 }
-  
-  
+
+
 @media only screen and (max-width: 459px) {
-  
-    .RenderRestaurantDetail {
-      display: flex;
-      justify-content: center;
-    }
-  
-    .photo_container {
-      margin-top: 30px;
-      margin-left: 7%;
-      width: 86%;
-    }
-  
-    .photo_container .slick-dots li {
-      margin: 0 3px;
-    }
-    .photos {
-      width: 100%;
-      height: 240px;
-    }
-  
-    
+
+  .RenderRestaurantDetail {
+    display: flex;
+    justify-content: center;
+  }
+
+  .photo_container {
+    margin-top: 30px;
+    margin-left: 7%;
+    width: 86%;
+  }
+
+  .photo_container .slick-dots li {
+    margin: 0 3px;
+  }
+
+  .photos {
+    width: 100%;
+    height: 240px;
+  }
+
+
 }
-  
+
 /*-----------------------------------AddressAutoComplete---------------------*/
 
 .AddressAutoComplete .form-control {
-    border: solid 0.5px rgb(120,120,120);
+  border: solid 0.5px rgb(120, 120, 120);
 }
-  
-  
-  
